--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,15 @@
 [submodule "dep/lunasvg"]
 	path = dep/lunasvg
 	url = https://github.com/sammycage/lunasvg.git
+[submodule "dep/file"]
+	path = dep/file
+	url = https://github.com/file/file
+[submodule "dep/md4c"]
+	path = dep/md4c
+	url = https://github.com/mity/md4c
+[submodule "dep/nlohmann_json"]
+	path = dep/nlohmann_json
+	url = https://github.com/nlohmann/json
+[submodule "dep/cli11"]
+	path = dep/cli11
+	url = https://github.com/CLIUtils/CLI11
