--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -102,7 +102,7 @@ jobs:
       run: |
         set -x
         pacman -S --needed --noconfirm pactoys make python diffutils ninja
-        pacboy -S --needed --noconfirm protobuf:p pkg-config:p curl-winssl:p file:p glfw:p gcc:p mbedtls:p sqlite:p freetype:p
+        pacboy -S --needed --noconfirm protobuf:p pkg-config:p curl-winssl:p file:p glfw:p gcc:p mbedtls:p sqlite:p freetype:p boost:p
 
     - name: run
       run: |
