--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -94,6 +94,11 @@ jobs:
         repository: 'davidgiven/fluxengine-testdata'
         path: 'fluxengine-testdata'
 
+    - uses: actions/checkout@v4
+      with:
+        repository: 'abseil/abseil-cpp'
+        path: 'abseil'
+
     - uses: msys2/setup-msys2@v2
       with:
         msystem: mingw64
@@ -102,8 +107,11 @@ jobs:
       run: |
         set -x
         pacman -S --needed --noconfirm pactoys make python diffutils ninja
-        pacboy -S --needed --noconfirm protobuf:p pkg-config:p curl-winssl:p file:p glfw:p mbedtls:p sqlite:p freetype:p boost:p clang:p binutils:p
+        pacboy -S --needed --noconfirm protobuf:p pkg-config:p curl-winssl:p file:p glfw:p mbedtls:p sqlite:p freetype:p boost:p gcc:p binutils:p
 
+    - name: abseil
+      run: |
+        cd abseil && mkdir build && cd build && 
     - name: run
       run: |
         make -C fluxengine BUILDTYPE=windows
