--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -101,6 +101,7 @@ jobs:
     - name: dependencies
       run: |
         set -x
+        pacman -Syu --noconfirm
         pacman -S --needed --noconfirm pactoys make python diffutils ninja
         pacboy -S --needed --noconfirm protobuf:p pkg-config:p curl-winssl:p file:p glfw:p mbedtls:p sqlite:p freetype:p boost:p gcc:p binutils:p nsis:p
 
