Change gitmodules to use my own fork of imhex.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "dep/imhex"]
 	path = dep/imhex
-	url = git@github.com:WerWolv/ImHex.git
+	url = git@github.com:davidgiven/ImHex.git
 [submodule "dep/libwolv"]
 	path = dep/libwolv
-	url = git@github.com:WerWolv/libwolv.git
+	url = https://github.com/WerWolv/libwolv.git
 [submodule "dep/imgui"]
 	path = dep/imgui
 	url = https://github.com/ocornut/imgui.git
