--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -88,7 +88,7 @@ jobs:
         msystem: mingw64
         update: true
         pacboy: |
-          python diffutils ninja make
+          python diffutils:p ninja:p make:p
           protobuf:p pkg-config:p curl-winssl:p file:p glfw:p mbedtls:p
           sqlite:p freetype:p boost:p gcc:p binutils:p nsis:p abseil-cpp:p
 
