Adjust dependencies... again.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -87,8 +87,9 @@ jobs:
       with:
         msystem: mingw64
         update: true
+        install: |
+          python diffutils ninja make
         pacboy: |
-          python diffutils:p ninja:p make:p
           protobuf:p pkg-config:p curl-winssl:p file:p glfw:p mbedtls:p
           sqlite:p freetype:p boost:p gcc:p binutils:p nsis:p abseil-cpp:p
 
