--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -51,7 +51,7 @@ jobs:
   build-macos-current:
     strategy:
       matrix:
-        runs-on: [macos-latest]
+        runs-on: [macos-15, macos-15-intel]
     runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
     - name: brew
       run: |
         brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg libmagic nlohmann-json cli11 boost glfw3 md4c ninja python freetype2 mbedtls
-        brew link boost
+        ls -l /usr/local/include
         brew upgrade
     - name: make
       run: gmake -C fluxengine
