--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -66,6 +66,8 @@ jobs:
     - name: brew
       run: |
         brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg libmagic nlohmann-json cli11 boost glfw3 md4c ninja python freetype2 mbedtls
+        brew unlink boost
+        brew link boost
         ls -l /usr/local/include
         brew upgrade
     - name: make
