--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 name: Autorelease
 
-concurrency: 
+concurrency:
   group: environment-release-${{ github.head_ref }}
   cancel-in-progress: true
 
@@ -12,94 +12,100 @@ on:
 jobs:
   dev-release:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: msys2 {0}
 
     steps:
-    - name: setup WSL
-      run: |
-        curl -L https://github.com/WhitewaterFoundry/Fedora-Remix-for-WSL/releases/download/41.0.0/Fedora-Remix-for-WSL-SL_41.0.0.0_x64_arm64.msixbundle -o fedora.msixbundle
-        unzip fedora.msixbundle Fedora-Remix-for-WSL-SL_41.0.0.0_x64.msix
-        unzip Fedora-Remix-for-WSL-SL_41.0.0.0_x64.msix install.tar.gz
-        wsl --update
-        wsl --set-default-version 1
-        wsl --import fedora fedora install.tar.gz
-        wsl --set-default fedora
-        wsl sh -c 'dnf -y install https://github.com/rpmsphere/noarch/raw/master/r/rpmsphere-release-40-1.noarch.rpm'
-        wsl sh -c 'dnf -y install gcc gcc-c++ protobuf-c-compiler protobuf-devel fmt-devel systemd-devel sqlite-devel wxGTK-devel mingw32-gcc mingw32-gcc-c++ mingw32-zlib-static mingw32-protobuf-static mingw32-sqlite-static mingw32-wxWidgets3-static mingw32-libpng-static mingw32-libjpeg-static mingw32-libtiff-static mingw32-nsis png2ico ninja-build'
+      - uses: msys2/setup-msys2@v2
+        with:
+          msystem: mingw64
+          update: true
+          install: |
+            python diffutils ninja make zip
+          pacboy: |
+            protobuf:p pkgconf:p curl-winssl:p file:p glfw:p mbedtls:p
+            sqlite:p freetype:p boost:p gcc:p binutils:p nsis:p abseil-cpp:p
 
-    - name: fix line endings
-      run: |
-        git config --global core.autocrlf false
-        git config --global core.eol lf
-        
-    - uses: actions/checkout@v4
-      with:
-        repository: 'davidgiven/fluxengine'
-        path: 'fluxengine'
+      - name: debug
+        run: |
+          pacboy -Q --info protobuf:p
+          cat /mingw64/lib/pkgconfig/protobuf.pc
+          /mingw64/bin/pkg-config.exe protobuf --cflags
+          /mingw64/bin/pkg-config.exe protobuf --cflags --static
 
-    - name: run
-      run: |
-        wsl sh -c 'cd fluxengine && make BUILDTYPE=windows -j$(nproc)'
+      - uses: actions/checkout@v4
+        with:
+          repository: 'davidgiven/fluxengine'
+          path: 'fluxengine'
+          submodules: 'true'
 
-    - name: nsis
-      run: |
-        wsl sh -c 'cd fluxengine && strip fluxengine.exe -o fluxengine-stripped.exe'
-        wsl sh -c 'cd fluxengine && strip fluxengine-gui.exe -o fluxengine-gui-stripped.exe'
-        wsl sh -c 'cd fluxengine && makensis -v2 -nocd -dOUTFILE=fluxengine-installer.exe extras/windows-installer.nsi'
+      - name: run
+        run: |
+          make -C fluxengine BUILDTYPE=windows AB_SANDBOX=no
 
-    - name: zip
-      run: |
-        wsl sh -c 'cd fluxengine && zip -9 fluxengine-windows.zip fluxengine.exe fluxengine-gui.exe upgrade-flux-file.exe brother120tool.exe brother240tool.exe FluxEngine.cydsn/CortexM3/ARM_GCC_541/Release/FluxEngine.hex fluxengine-installer.exe'
+      - name: nsis
+        run: |
+          cd fluxengine
+          strip fluxengine.exe -o fluxengine-stripped.exe
+          strip fluxengine-gui.exe -o fluxengine-gui-stripped.exe
+          makensis -v2 -nocd -dOUTFILE=fluxengine-installer.exe extras/windows-installer.nsi
 
-    - name: date
-      run: |
-        echo "RELEASE_DATE=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
+      - name: zip
+        run: |
+          wsl sh -c 'cd fluxengine && zip -9 fluxengine-windows.zip fluxengine.exe fluxengine-gui.exe upgrade-flux-file.exe brother120tool.exe brother240tool.exe FluxEngine.cydsn/CortexM3/ARM_GCC_541/Release/FluxEngine.hex fluxengine-installer.exe'
 
-    - name: tag
-      uses: EndBug/latest-tag@latest
-      with:
-        tag-name: dev
-        force-branch: false
-        git-directory: 'fluxengine'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: date
+        run: |
+          echo "RELEASE_DATE=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
 
-    - name: delete-old-assets
-      uses: mknejp/delete-release-assets@v1
-      with:
-        token: ${{ github.token }}
-        tag: dev
-        assets: | 
-          fluxengine.zip
-          fluxengine-installer.exe
-        fail-if-no-assets: false
+      - name: tag
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: dev
+          force-branch: false
+          git-directory: 'fluxengine'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: release
-      uses: softprops/action-gh-release@v1
-      with:
-        name: Development build ${{ env.RELEASE_DATE }}
-        files: |
-          fluxengine/fluxengine.zip
-          fluxengine/fluxengine-installer.exe
-        tag_name: dev
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: delete-old-assets
+        uses: mknejp/delete-release-assets@v1
+        with:
+          token: ${{ github.token }}
+          tag: dev
+          assets: |
+            fluxengine.zip
+            fluxengine-installer.exe
+          fail-if-no-assets: false
+
+      - name: release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Development build ${{ env.RELEASE_DATE }}
+          files: |
+            fluxengine/fluxengine.zip
+            fluxengine/fluxengine-installer.exe
+          tag_name: dev
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
     strategy:
       matrix:
-        runs-on: [macos-13, macos-latest]
+        runs-on: [ macos-15, macos-15-intel ]
     runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: 'true'
 
     - name: brew
-      run: brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg
+      run: |
+        brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils dylibbundler libjpeg libmagic nlohmann-json cli11 boost glfw3 md4c ninja python freetype2 mbedtls
+        brew upgrade
 
     - name: make
-      run: |
-        gmake
-        mv FluxEngine.pkg FluxEngine-${{ runner.arch }}.pkg
-        mv FluxEngine.app.zip FluxEngine-${{ runner.arch }}.app.zip
+      run: gmake
 
     - name: tag
       uses: EndBug/latest-tag@latest
@@ -114,7 +120,7 @@ jobs:
       with:
         token: ${{ github.token }}
         tag: dev
-        assets: | 
+        assets: |
           FluxEngine-${{ runner.arch }}.pkg
           FluxEngine-${{ runner.arch }}.app.zip
         fail-if-no-assets: false
