--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,8 +107,8 @@ jobs:
     - name: make
       run: |
         gmake
-        mv fluxengine/FluxEngine.pkg FluxEngine-${{ runner.arch }}.pkg
-        mv fluxengine/FluxEngine.app.zip FluxEngine-${{ runner.arch }}.app.zip
+        mv FluxEngine.pkg FluxEngine-${{ runner.arch }}.pkg
+        mv FluxEngine.app.zip FluxEngine-${{ runner.arch }}.app.zip
 
     - name: tag
       uses: EndBug/latest-tag@latest
