--- a/tests/docker/Dockerfile.debian12
+++ b/tests/docker/Dockerfile.debian12
@@ -4,7 +4,10 @@ RUN apt-get update
 RUN apt install -y python3 make xz-utils python3 python3-hamcrest \
     protobuf-compiler libprotobuf-dev libsqlite3-dev \
     libfmt-dev libprotobuf-dev wx-common pkg-config \
-    libudev-dev g++ libwxgtk3.2-dev
+    libudev-dev g++ libwxgtk3.2-dev ninja-build \
+    libfreetype-dev libglfw3-dev libboost-regex-dev \
+    nlohmann-json3-dev libmd4c-dev libdbus-1-dev \
+    libcurl4-openssl-dev libmagic-dev libmbedtls-dev
 
 RUN useradd app
 RUN mkdir -p /home/app
@@ -27,5 +30,6 @@ COPY --chown=app:app build.py .
 COPY --chown=app:app config.py .
 COPY --chown=app:app protocol.h .
 COPY --chown=app:app README.md .
+COPY --chown=app:wpp extras/pkgconfig/mbedtls.pc /usr/local/share/pkgconfig/
 
 RUN make
