--- a/tests/docker/Dockerfile.fedora43
+++ b/tests/docker/Dockerfile.fedora43
@@ -1,6 +1,12 @@
-FROM manjarolinux/base:latest
+FROM fedora:43
 
-RUN pacman -Sy --noconfirm base-devel protobuf wxwidgets-gtk3
+RUN dnf update -y
+RUN dnf -y install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-43.noarch.rpm
+RUN dnf -y install \
+    protobuf-compiler protobuf-devel sqlite-devel libudev-devel \
+    wxGTK-devel gcc gcc-c++ fmt-devel ninja-build glfw-devel \
+    libcurl-devel file-devel mbedtls-devel cli11-devel \
+    lunasvg-devel md4c-devel boost-devel
 
 RUN useradd app
 RUN mkdir -p /home/app
