--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -54,7 +54,7 @@ jobs:
         #sudo apt install docker
     - name: make
       run: |
-        make -C docker-${{ matrix.variant }}
+        make -C fluxengine docker-${{ matrix.variant }}
 
   #build-linux-debian-11:
   #  runs-on: ubuntu-22.04
