Add a Debian13 dockerfile.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         variant:
         - debian12
+        - debian13
         - fedora40
         - fedora41
         - fedora42
